--- a/src/App.css
+++ b/src/App.css
@@ -49,12 +49,33 @@
   margin-bottom: 30px;
 }
 
+canvas {
+  background:#f9f9f9;
+}
+
 .actionBar input, .actionBar button {
   height:40px;
   margin-right:15px;
-  font-size: 18px;
+  font-size: 15px;
+  padding-left:5px;
+  border: none;
+  box-shadow: 3px 3px 5px #aaa;
+}
+.actionBar button {
+  background: #6A1B9A;
+  color:#fff;
+  padding:0px 15px;
+}
+
+button:disabled {
+  background: #b5b5b5;
 }
 
 .canvasContainer {
+  height:500px;
+  width:1200px;
+  overflow: scroll;
+  border:1px solid #999;
   text-align:center;
+  margin:0px auto;
 }
