--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+  position:relative;
 }
 
 .App-logo {
@@ -80,4 +81,14 @@ button:disabled {
   margin:0px auto;
   margin-bottom: 100px;
   box-shadow: 0px 0px 30px #999;
+}
+
+#mario {
+  height:50px;
+  width:50px;
+  position:absolute;
+  transition: all 0.25s;
+  img {
+    height:60px;
+  }
 }
