--- a/src/App.css
+++ b/src/App.css
@@ -36,6 +36,7 @@
 
 .headPart {
   height:80px;
+  width:100%;
   display:inline-block;
 }
 .headPart img {
@@ -91,4 +92,13 @@ button:disabled {
   img {
     height:60px;
   }
+}
+
+.marioName {
+  float: right;
+  color: #000;
+  line-height: 100px;
+  font-size: 49px;
+  padding-right: 50px;
+  text-shadow: 5px 5px 5px #fff;
 }
